Commented some code. If an image can't be found at the address specified in the Visual table, an error appears on the tagging page instead of the image. Added custom links to the admin header for an easier navigation between visualDict pages. An image can be deleted from the summary tables. Managed to correctly wrap the tags lexemes in the table cell.

--- a/wwwbase/styles/visualDict.css
+++ b/wwwbase/styles/visualDict.css
@@ -8,14 +8,10 @@
   border: 1px solid black;
 }
 
-.visualTagImg img {
+#visualTagCanvas img {
   float: left;
   max-width: 500px;
   max-height: 500px;
-}
-
-#helpText {
-  display: none;
 }
 
 #tagOptions {
@@ -27,11 +23,6 @@
 #savedTags {
   float: left;
   width: 430px;
-}
-
-
-#tagsInfo {
-  display: none;
 }
 
 #gallery {
@@ -71,4 +62,15 @@
 
 .mainLexeme {
   font-weight: bold;
+}
+
+.allLexemes {
+  white-space: pre-line;
+}
+
+.missingImageError,
+.extraAdminHeaderLinks,
+#helpText,
+#tagsInfo {
+  display: none;
 }
